# snippets

./: .gitattributes  .gitignore  LICENSE  LICENSE.md  README.md  git.fish  github  package-lock.json  rungit  rungit.py  upload-all.fish
.github/workflows/: format.yaml
.metals/: metals.lock.db
c/: .gitignore  CMakeLists.txt  copy.c  main.c  meson.build  radix-sort.c  sorter.c
c++/: .gitignore  CMakeLists.txt  classes.c++  init-stmt.c++  meson.build  parallel.c++  signed-overflow.c++  template.c++  unique.c++  virtual.c++
c++/namespace/: fail.c++  meson.build  ok.c++
cloud-security-hw1/: docker-compose.yml
cloud-security-hw2/: go.mod  go.sum  index.html
cloud-security-hw2/secret/: process.go  secret.go
cloud-security-hw2/server/: server.go
cloud-security-hw3/: Makefile
computer-security-hw4/: .gitignore
cpp/: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  PreLoad.cmake  automatic.cpp  casting.cpp  classes.cpp  const.cpp  ctor.cpp  deadlock.cpp  exceptions.cpp  init-stmt.cpp  main.cpp  modern.cpp  parallel.cpp  polymorphism.cpp  ptr-to-member.cpp  references.cpp  template.cpp  unique.cpp  variants.cpp  virtual.cpp
cpp/c/: CMakeLists.txt  copy.c  main.c  radix-sort.c  sorter.c
cpp/calculator/: CMakeLists.txt  calculator.cpp  calculator.cxx  calculator.hpp  calculator.hxx  main.cxx
cpp/modules/: hello.cpp  main.cpp  makefile.fish  world.cpp
cpp/namespace/: CMakeLists.txt  ok.cpp  using-fail.cpp
cpp/overflows/: CMakeLists.txt  floats.cpp  signed-int.cpp
cpp_example/: Makefile  main.cpp  makefile.fish
cxx/: CMakeLists.txt  README.md  automatic.cxx  classes.cxx  const.cxx  ctor.cxx  exceptions.cxx  meson.build  modern.cxx  ptr-to-member.cxx  references.cxx  template.cxx  unique.cxx  variants.cxx  virtual.cxx
cxx/c/: .gitignore  copy.c  main.c  radix-sort.c  sorter.c
cxx/calculator/: CMakeLists.txt  calculator.cxx  calculator.hxx  main.cxx  meson.build
cxx/namespace/: CMakeLists.txt  meson.build  ok.cxx  using-fail.cxx
cxx/overflows/: CMakeLists.txt  floats.cxx
dart/: .packages  README.md  async.dart  classes.dart  closure.dart  img.dart  main.dart  operators.dart  pubspec.yaml
dart_example/: .packages  img.dart  main.dart  pubspec.yaml
docker_example/: Dockerfile
eda_experiments/: common.py  main.py  normal_net.py  recursive_net.py
flask_example/: app.py
flutter_app/: pubspec.yaml
flutter_example/: .packages  pubspec.yaml
flutter_playground/: .gitignore  pubspec.yaml
generics_example/: atype_slice.go  main.go
github-actions/: README.md  action.yml
go/: .gitignore  README.md  go.mod  go.sum
golang/: .gitignore  go.mod  go.sum  main.go
golang_example/: go.mod  main  main.go  while.go
golang_test/: main.go
gradle_example/: .project
gradle_test/: build.gradle  settings.gradle
gre_helper/: Database.py  test.py
image_example/: .packages  pubspec.yaml
java/: .gitignore
java_example/: .project  build.gradle  pom.xml  settings.gradle
java_module_example/: .gitignore  .project  README.md  pom.xml
java_test/: .project  Main.java
javascript/: .gitignore  apply_bind_call.js  class.js  container.js  controlflow.js  coroutine.js  function.js  functions.js  iterators.js  main.js  object.js  package-lock.json  package.json  symbol.js  type.js  types.js  variable.js
lua/: b.lua  main.lua
markdown/: takeaways.md  thoughts.md
mdbook/: book.toml
notes/: ideas.md  takeaways.md
page_test/: index.html
personal_page/: README.md  pubspec.yaml
python/: .gitignore  README.md  async.py  attributes.py  call.py  coroutine.py  inherit.py  matching.py  metaclass.py  methods.py  monkey.py  proto.py  pyproject.toml  slots.py  test.py  threads.py  types.py  unpacking.py
python/nlp/: model-number.py
python/src/: async.py  attributes.py  calculator.py  call.py  coroutine.py  data-classes.py  inherit.py  mangle.py  matching.py  monkey.py  pattern.py  patterns.py  proto-auto-methods.py  proto-inherit.py  proto.py  remote-functions.py  self.py  sub.py  super.py  threads.py  types.py  typing-info.py  unpacking.py  variance.py
python_example/: main.py
route/: .project  Cargo.toml  build.gradle  go.mod  main.go  mental.md  settings.gradle
routing_example/: .classpath  pom.xml
rust/: Cargo.toml
rust_example/: Cargo.toml
rust_test/: Cargo.toml
scala_test/: .gitignore  logging.sc  main.sc  main.scala  mutable.sc  node.sc
thoughts/: fundamental.md
trait-example/: Cargo.toml
typescript/: .gitignore  2sat.ts  README.md  apply_bind_call.ts  async.ts  class.js.ts  class.ts  container.js.ts  controlflow.js.ts  coroutine.ts  dict.ts  func.js  func.ts  function.js.ts  iterators.ts  main.js.ts  main.ts  module.ts  obj.ts  object.js.ts  package-lock.json  package.json  symbol.js.ts  tsconfig.json  type.js.ts  type.ts  variable.js.ts
(+242 files in other folders)
