[project]
name = "python"
version = "0.0.0"
description = "Python scripts"
authors = [
    {name = "RenChu Wang", email = "patrick1031wang@gmail.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = "false"

[tool.pdm.dev-dependencies]
format = [
    "autoflake>=2.2.1",
    "black>=24.2.0",
    "isort>=5.13.2",
]
type = [
    "mypy>=1.8.0",
]

[tool.autoflake]
in-place = true
recursive = true
exclude = "__init__.py"
expand-star-imports = true
remove-all-unused-imports = true
remove-duplicate-keys = true

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
