[project]
name = "snippets"
description = "Python scripts"
authors = [
    {name = "RenChu Wang",email = "patrick1031wang@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.13"

[build-system]
requires = ["setuptools", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "autoflake>=2.3.1",
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.16.0",
]

[tool.autoflake]
in-place = true
recursive = true
exclude = "__init__.py"
expand-star-imports = true
remove-all-unused-imports = true
remove-duplicate-keys = true

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
